# project-dependencies

./: .gitignore  LICENSE.md  README.md  install_all.py
__deps/: libraries.json
catch2/: build.py  install.py
clang/: install.py
doxygen/: install.py
glew/: build.py  install.py
glm/: install.py
libsodium/: build.py  install.py
ninja/: build.py  install.py
nlohmann_json/: install.py
ranges-v3/: install.py
sail/: build.py  install.py
sdl/: build.py  install.py
sdl_image/: build.py  install.py
sdl_mixer/: build.py  install.py
sdl_net/: build.py  install.py
sdl_ttf/: build.py  install.py
sqlite3/: CMakeLists.txt  build.py  install.py
v8/: build.py  install.py
vulkan/: install.py
vulkan_memory_allocator/: install.py
